--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -5,19 +5,61 @@
   --bg-color: beige;
   --main-color: #323232;
   --main-focus: #2d8cf0;
-  width: 270px;
-  height: 500px;
+  box-sizing: border-box;
   background: lightblue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 0;
+  box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  border-radius: 5px;
   border: 2px solid var(--main-color);
   box-shadow: 4px 4px var(--main-color);
+  
+}
+
+.card_1{
+  width: 90%;
+  max-width: 300px;
+  margin: 0 auto;
+  height: 320px;
+  background-color: #fff;
+  padding: 16px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  display: grid;
-  flex-direction: column;
-  justify-content: flex-end;
-  padding: 80px;
-  gap: 10px;
-  margin-top: 150px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  border: 2px solid var(--main-color);
+  box-shadow: 4px 4px var(--main-color);
+}
+
+.swiper {
+  width: 95%;
+  height: auto;
+  padding: 20px 0;
+  box-sizing: border-box;
+  margin-left: 0 !important;
+}
+
+.swiper-wrapper {
+  margin-left: 0 !important;
+}
+
+/* Make Swiper adapt to smaller screens */
+@media screen and (max-width: 1024px) {
+  .swiper {
+    padding: 10px;
+  }
+
+}
+
+
+
+@media screen and (max-width: 480px) {
+  
+  .card_1 {
+    max-width: 90%;
+  }
 }
 
 .card:last-child {
@@ -55,6 +97,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin-top: 5px;
 }
 
 .card-price {
@@ -167,3 +210,12 @@
     opacity: 1;
     transform: translate(-50%, -130%);
   }
+
+
+
+.product-card {
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  text-align: center;
+}
